# latex2arxiv

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  arxiv_config.yaml  conftest.py  converter.py  make_demo.py  mcp_server.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  release.yml  test.yml
browser-extension/: PRIVACY.md  README.md  STORE_LISTING.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  panel.css  worker.js
browser-extension/lib/: offscreen-lifecycle.mjs  revoke.mjs  ui-pure.js
browser-extension/py/: run.py
browser-extension/pyodide/: integrity.json  regex-2024.11.6-cp313-cp313-pyemscripten_2025_0_wasm32.whl
browser-extension/screenshots/cws/: README.md
browser-extension/scripts/: build-store-zip.sh  vendor-pyodide.sh
browser-extension/tests/: background-source.test.mjs  manifest.test.mjs  offscreen-lifecycle.test.mjs  package.json  pyodide-smoke.mjs  revoke.test.mjs  ui-pure.test.mjs  vendored-integrity.test.mjs  wheels-integrity.test.mjs  worker-source.test.mjs
browser-extension/tests/lib/: wheels-integrity.mjs
browser-extension/wheels/: bibtexparser-1.4.4-py3-none-any.whl  index.json  latex2arxiv-1.2.2-py3-none-any.whl  latex2arxiv-1.2.3-py3-none-any.whl  latex2arxiv-1.2.5-py3-none-any.whl
docs/: browser-extension-design.md  ci.md  flatten.md  json-schema.md  mcp.md  overleaf.md  pre-flight.md  vscode-extension-handoff.md
docs/refactor/: assumption-audit.txt  ast-anchor.txt
docs/superpowers/specs/: 2026-05-15-vscode-icon-design.md
pipeline/: bibtex.py  build.py  config.py  deps.py  flatten.py  guide.py  images.py  preflight.py  process.py  resolve.py  tex.py  types.py
tests/: test_fixture_manifests.py  test_guide.py  test_images.py  test_mcp_sentinel.py  test_mcp_server.py  test_normalize_main.py  test_path_traversal.py  test_pipeline.py  test_redos.py  test_refactor_baseline.py  test_security.py  test_v1_release_audit.py
tests/baselines/: 01-minimal.dryrun.json  01-minimal.zip.json  02-biblatex-biber.dryrun.json  02-biblatex-biber.python.json  02-biblatex-biber.zip.json  03-revision-markup.dryrun.json  03-revision-markup.zip.json  04-multi-documentclass.dryrun.json  04-multi-documentclass.zip.json  05-pre-flight-warnings.dryrun.json  05-pre-flight-warnings.python.json  05-pre-flight-warnings.zip.json  06-inline-verbatim.dryrun.json  06-inline-verbatim.zip.json  07-fontspec-xelatex.dryrun.json  07-fontspec-xelatex.python.json  07-fontspec-xelatex.zip.json  08-flatten-basic.dryrun.json  08-flatten-basic.zip.json  09-flatten-subfile.dryrun.json  09-flatten-subfile.zip.json  10-multifile-graphicspath.dryrun.json  10-multifile-graphicspath.zip.json
tests/features/: README.md  clean_prune.feature  cli_inputs.feature  compile.feature  conftest.py  custom_config.feature  dry_run.feature  flatten.feature  github_action.feature  guide.feature  json_output.feature  mcp_server.feature  preflight_checks.feature  resize_images.feature  test_clean_prune.py  test_cli_inputs.py  test_compile.py  test_custom_config.py  test_dry_run.py  test_flatten.py  test_github_action.py  test_guide.py  test_json_output.py  test_mcp_server.py  test_preflight_checks.py  test_resize_images.py  test_vscode_extension.py  vscode_extension.feature
tests/features/steps/: action_steps.py  cli.py  common.py  mcp_steps.py  vscode_steps.py
tests/fixtures/: README.md  run_all.sh
tests/fixtures/01-minimal/: main.tex
tests/fixtures/02-biblatex-biber/: main.tex
tests/fixtures/02-biblatex-biber/bib/: refs.bib
tests/fixtures/03-revision-markup/: arxiv_config.yaml  main.tex
tests/fixtures/04-multi-documentclass/: Supplementary_Materials.tex  main.tex  main_backup.tex  response.tex
tests/fixtures/05-pre-flight-warnings/: custom.sty  main.tex  photo.eps
tests/fixtures/06-inline-verbatim/: main.tex
tests/fixtures/07-fontspec-xelatex/: main.tex
tests/fixtures/08-flatten-basic/: conclusion.tex  intro.tex  main.tex
tests/fixtures/09-flatten-subfile/: ch2.tex  main.tex
tests/fixtures/09-flatten-subfile/chapters/: ch1.tex
tests/fixtures/10-multifile-graphicspath/: main.tex  spare_notes.tex
tests/fixtures/10-multifile-graphicspath/sections/: intro.tex
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
zed-extension/: Cargo.toml  LICENSE  README.md  extension.toml
zed-extension/src/: lib.rs
