[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex2arxiv"
version = "0.4.1"
description = "Convert a LaTeX .zip project into an arXiv-ready .zip"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "bibtexparser>=1.4,<2",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.scripts]
latex2arxiv = "converter:main"

[tool.setuptools]
py-modules = ["converter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.setuptools.package-data]
"*" = ["demo_project.zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ["tests/test_bugs.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W291", "W293"]
