[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex2arxiv"
version = "0.5.0"
description = "Validates arXiv compatibility and cleans a LaTeX .zip project in one command"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yu (Hugh) Zheng", email = "hugh.stats@gmail.com"},
]
keywords = [
    "arxiv",
    "latex",
    "tex",
    "submission",
    "overleaf",
    "bibtex",
    "preflight",
    "validator",
    "publishing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bibtexparser>=1.4,<2",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.scripts]
latex2arxiv = "converter:main"

[tool.setuptools]
py-modules = ["converter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.setuptools.package-data]
"pipeline" = ["demo_project.zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ["tests/test_bugs.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W291", "W293"]
