[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex2arxiv"
version = "1.2.4"
description = "Validates arXiv compatibility and cleans a LaTeX .zip project in one command"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yu (Hugh) Zheng", email = "hugh.stats@gmail.com"},
]
keywords = [
    "arxiv",
    "latex",
    "tex",
    "submission",
    "overleaf",
    "bibtex",
    "preflight",
    "validator",
    "publishing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bibtexparser>=1.4,<2",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "regex>=2024.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/YuZh98/latex2arxiv"
Source = "https://github.com/YuZh98/latex2arxiv"
Issues = "https://github.com/YuZh98/latex2arxiv/issues"
Changelog = "https://github.com/YuZh98/latex2arxiv/blob/main/CHANGELOG.md"

[project.scripts]
latex2arxiv = "converter:main"
latex2arxiv-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["converter", "mcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.setuptools.package-data]
"pipeline" = ["demo_project.zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
# Silence a known DeprecationWarning emitted by gherkin-official (transitive
# dep of pytest-bdd): re.split() positional `maxsplit` is deprecated in
# Python 3.14. Fixed upstream in newer gherkin-official, but pytest-bdd 8.1
# pins the older version. Remove this filter when pytest-bdd bumps gherkin.
filterwarnings = [
    "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:gherkin.gherkin_line",
]

[tool.pyright]
pythonVersion = "3.10"
exclude = ["browser-extension/py"]

[tool.ruff]
line-length = 120
exclude = ["tests/test_bugs.py", "browser-extension/py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W291", "W293"]
